--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         <h1>项目管理工具</h1>
       </a>
     </div>
+    <!--    <span nz-icon nzType="clock-circle" nzTheme="outline"></span>-->
     <ul nz-menu nzTheme="dark" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <li nz-submenu nzOpen nzTitle="Dashboard" nzIcon="dashboard">
         <ul>
@@ -24,6 +25,10 @@
             <a>Workplace</a>
           </li>
         </ul>
+      </li>
+      <li nz-menu-item nzMatchRouter routerLink="/schedule">
+        <span nz-icon nzType="clock-circle"></span>
+        <span>定时任务</span>
       </li>
       <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
         <ul>
