--- a/src/app/modules/schedule/list/list.component.html
+++ b/src/app/modules/schedule/list/list.component.html
@@ -1,1 +1,24 @@
-<p>list works!</p>
+<nz-table #basicTable [nzData]="dataSet">
+  <thead>
+  <tr>
+    <th>标题</th>
+    <th>cron</th>
+    <th>Address</th>
+    <th>Action</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let data of basicTable.data">
+    <td>{{data.title}}</td>
+    <td>{{data.cron}}</td>
+    <td>{{data.address}}</td>
+    <td>
+      <a>编辑</a>
+      <nz-divider nzType="vertical"></nz-divider>
+      <a>Delete</a>
+      <nz-divider nzType="vertical"></nz-divider>
+      <a (click)="test1(data)">test1</a>
+    </td>
+  </tr>
+  </tbody>
+</nz-table>
