--- a/src/app/modules/schedule/list/list.component.html
+++ b/src/app/modules/schedule/list/list.component.html
@@ -1,19 +1,19 @@
 <nz-table #basicTable [nzData]="dataSet">
   <thead>
   <tr>
-    <th>标题</th>
     <th>cron</th>
-    <th>Address</th>
+    <th>message</th>
     <th>Action</th>
   </tr>
   </thead>
   <tbody>
   <tr *ngFor="let data of basicTable.data">
-    <td>{{data.title}}</td>
     <td>{{data.cron}}</td>
-    <td>{{data.address}}</td>
+    <td>{{data.message}}</td>
     <td>
-      <a>编辑</a>
+      <a (click)="startJob(data)">开始</a>
+      <nz-divider nzType="vertical"></nz-divider>
+      <a (click)="stopJob(data)">停止</a>
       <nz-divider nzType="vertical"></nz-divider>
       <a>Delete</a>
       <nz-divider nzType="vertical"></nz-divider>
