--- a/src/app/modules/schedule/list/list.component.html
+++ b/src/app/modules/schedule/list/list.component.html
@@ -17,18 +17,19 @@
       <td>{{data.cron}}</td>
       <td>{{data.message}}</td>
       <td>
-        <button nz-button nzType="primary" nzShape="circle" *ngIf="data.status !== 'start'" (click)="startJob(data)">
+        <button nz-button nzType="primary" nzShape="circle" nzSize="small" *ngIf="data.status !== 'start'"
+                (click)="startJob(data)">
           <span nz-icon nzType="caret-right"></span>
         </button>
-        <button nz-button nzType="primary" nzShape="circle" nzDanger *ngIf="data.status === 'start'"
+        <button nz-button nzType="primary" nzShape="circle" nzSize="small" nzDanger *ngIf="data.status === 'start'"
                 (click)="stopJob(data)">
           <span nz-icon nzType="pause"></span>
         </button>
       </td>
       <td>
-        <button nz-button nzType="primary">编辑</button>
+        <button nz-button nzType="primary" nzSize="small" (click)="editJob(data)">编辑</button>
         <nz-divider nzType="vertical"></nz-divider>
-        <button nz-button nzType="primary" nzDanger
+        <button nz-button nzType="primary" nzSize="small" nzDanger
                 nz-popconfirm
                 nzPopconfirmTitle="确认要删除这个任务吗，删除后将无法恢复?"
                 (nzOnConfirm)="deleteJob(data)"
